--- a/06_StatisticalInference/CourseProject/SimulationExercise.Rmd
+++ b/06_StatisticalInference/CourseProject/SimulationExercise.Rmd
@@ -42,7 +42,7 @@ library(ggplot2);
 
 # Simulations
 
-## Empirical density of the exponential
+### Empirical density of the exponential
 
 We begin by simulating 1000 exponentials with \(\lambda = 0.2\)
 
@@ -56,23 +56,12 @@ names(simExp) <- "Exp.2";
 
 and by plotting the resulting empirical density
 
-```{r plotExp, fig.cap = "Empirical Density", echo = F}
-ggplot(data = simExp, aes(x = Exp.2)) + 
-        geom_histogram(binwidth = 1, 
-                       colour = "black", 
-                       fill = "lightblue",
-                       aes(y = after_stat(density))) +
-        stat_function(fun = dexp, args = list(rate = lambda), linewidth = 1) +
-        labs(x = "x",
-             y = "Density",
-             title = "Empirical density of the exponential distribution",
-             caption = paste("Empirical density of the exponential",
-                             "distribution with parameter lambda = 0.2,",
-                             "compared with the theoretical density.", 
-                             sep = " "));
+```{r plotExpshow, echo = F, ref.label = "plotExp", fig.show = "as.is", fig.cap = "Empirical Density", fig.align = "center"}
 ```
 
 Clearly this is very different from the density of a normal distribution.
+
+### Simulating 1000 means of 40 iid exponentials
 
 Now, let us simulate 1000 means of 40 exponentials with parameter \(\lambda = 0.2\)
 
@@ -96,7 +85,7 @@ with the theoretical mean of the mean, which coincides with the mean of one of t
 1/lambda;
 ```
 
-Figure \@ref(fig:compPlot) shows the sample mean (in red) of our empirical density, which is clearly very close to the mean of the theoretical normal distribution (represented with a dashed blue curve).
+Figure \@ref(fig:compPlotshow) shows the sample mean (in red) of our empirical density, which is clearly very close to the mean of the theoretical normal distribution (represented with a dashed blue curve).
 
 # Sample Variance versus Theoretical Variance
 
@@ -112,97 +101,31 @@ with the theoretical variance of the mean, which coincides with the variance of 
 1/(n*lambda^2);
 ```
 
-Figure \@ref(fig:compPlot) again shows one sample standard deviation (in orange) from the sample mean of our empirical density. For comparison purposes, the shaded blue area under the normal density represents one theoretical standard deviation around the theoretical mean.
+Figure \@ref(fig:compPlotshow) shows one sample standard deviation (in orange) from the sample mean of our empirical density. For comparison, the shaded blue area represents one theoretical standard deviation around the theoretical mean.
+
+The difference between the empirical and the theoretical parameters comes from the fact that this is an approximation by the CLT. We would need an infinite number of iid exponentials to attain the equality.
 
 # Distribution
 
 In order to verify that the distribution of our average of 40 iid exponentials is approximately normal, let us plot the empirical distribution in comparison with the theoretical one. Let us also highlight a few parameters like empirical and theoretical means and standard deviations.
 
-```{r compPlot, fig.cap = "Density Comparison", echo = F}
-line.data <- data.frame(xintercept = c(mean(mn$Sample.mean)-sd(mn$Sample.mean), 
-                                       mean(mn$Sample.mean), 
-                                       mean(mn$Sample.mean)+sd(mn$Sample.mean)),
-                        Lines = c("mu - sigma", 
-                                  "mu", 
-                                  "mu + sigma"),
-                        colour = c("mu - sigma" = "orange", 
-                                   "mu" = "red", 
-                                   "mu + sigma" = "orange"),
-                        stringsAsFactors = F);
-
-my.labs <- list(bquote(bar(X) - s),
-                bquote(bar(X)),
-                bquote(bar(X) + s));
-
-# https://github.com/tidyverse/ggplot2/wiki/Plotmath
-
-ggplot(data = mn, aes(x = Sample.mean)) + 
-        geom_histogram(binwidth = .3, 
-                       colour = "black", 
-                       fill = "lightblue",
-                       aes(y = after_stat(density))) +
-        stat_function(fun = dnorm, 
-                      args = list(mean = 1/lambda, sd = 1/(sqrt(n)*lambda)), 
-                      linewidth = 1,
-                      colour = "navy",
-                      linetype = 2) +
-        stat_function(fun = dnorm, 
-                      args = list(mean = 1/lambda, sd = 1/(sqrt(n)*lambda)), 
-                      geom = "area", 
-                      fill = "navy", 
-                      alpha = 0.2,
-                      xlim = 1/lambda + c(-1,1)*1/(sqrt(n)*lambda)) +
-        geom_vline(aes(xintercept = xintercept, colour = Lines),
-                   data = line.data,
-                   linewidth = 0.5)  +
-        scale_colour_manual(values = line.data$colour,
-                            breaks = line.data$Lines,
-                            labels = my.labs) +
-        labs(x = "Sample means",
-             y = "Density",
-             title = "Density of averages of 40 exponentials",
-             caption = paste("Empirical density function of the averages of",
-                             "40 exponentials with parameter lambda = 0.2\n",
-                             "in comparison with the density of a normal",
-                             "distribution with mu = 1/lambda and",
-                             "sd = 1/sqrt(40)lambda",
-                             sep = " "));
+```{r compPlotshow, echo = F, ref.label = "compPlot", fig.show = "as.is", fig.cap = "Density Comparison", fig.align = "center"}
 ```
 
 As we expect, in view of the Central Limit Theorem, the empirical distribution of the mean of 40 iid exponentials of parameter \(\lambda\) is approximately normal with mean \(1/\lambda\) and standard deviation \(1/\sqrt{40}\lambda\). In order to find additional evidence, let us plot a q-q plot of the theoretical quantiles against the empirical ones.
 
-```{r qqplot, fig.cap = "q-q plot", echo = F}
-ggplot(data = mn, aes(sample = Sample.mean)) +
-        stat_qq(distribution = qnorm, 
-                dparams = list(mean = 1/lambda, sd = 1/(sqrt(n)*lambda)),
-                colour = "red",
-                alpha = 0.5) +
-        stat_qq_line(distribution = qnorm, 
-                     dparams = list(mean = 1/lambda, sd = 1/(sqrt(n)*lambda)),
-                     colour = "navy",
-                     linewidth = 1,
-                     linetype = 2) +
-        labs(x = "Theoretical normal quantiles",
-             y = "Empirical exponential quantiles",
-             title = "q-q plot",
-             caption = paste("q-q plot of the quantiles of a normal",
-                             "distribution with mu = 1/lambda", 
-                             "and sd = 1/sqrt(40)lambda\n",
-                             "against the empirical quantiles from",
-                             "our sample of means of 40 exponentials",
-                             sep = " ")) + 
-        theme(aspect.ratio=1);
+```{r qqshow, echo = F, ref.label = "qqplot", fig.show = "as.is", fig.cap = "q-q plot", fig.align = "center"}
 ```
 
 For the convenience of the interested reader, the *quantile-quantile (q-q) plot* is a graphical technique for determining if two data sets come from populations with a common distribution. A q-q plot is a plot of the quantiles of the first data set against the quantiles of the second data set. A 45-degree reference line is also plotted. If the two sets come from a population with the same distribution, the points should fall approximately along this reference line. The greater the departure from this reference line, the greater the evidence for the conclusion that the two data sets have come from populations with different distributions.
 
 # Appendices
 
-## Code for the empirical density
+### Code for the empirical density
 
-Code for Figure \@ref(fig:plotExp).
+Code for Figure \@ref(fig:plotExpshow).
 
-```{r plotExpcode, fig.show = "hide"}
+```{r plotExp, fig.show = "hide"}
 ggplot(data = simExp, aes(x = Exp.2)) + 
         geom_histogram(binwidth = 1, 
                        colour = "black", 
@@ -218,11 +141,11 @@ ggplot(data = simExp, aes(x = Exp.2)) +
                              sep = " "));
 ```
 
-## Code for the density comparison
+### Code for the density comparison
 
-Code for Figure \@ref(fig:compPlot).
+Code for Figure \@ref(fig:compPlotshow).
 
-```{r compPlotcode, fig.show = "hide"}
+```{r compPlot, fig.show = "hide"}
 line.data <- data.frame(xintercept = c(mean(mn$Sample.mean)-sd(mn$Sample.mean), 
                                        mean(mn$Sample.mean), 
                                        mean(mn$Sample.mean)+sd(mn$Sample.mean)),
@@ -271,11 +194,11 @@ ggplot(data = mn, aes(x = Sample.mean)) +
                              sep = " "));
 ```
 
-## Code for the q-q plot
+### Code for the q-q plot
 
-Code for Figure \@ref(fig:qqplot).
+Code for Figure \@ref(fig:qqshow).
 
-```{r qqplotcode, fig.show = "hide"}
+```{r qqplot, fig.show = "hide"}
 ggplot(data = mn, aes(sample = Sample.mean)) +
         stat_qq(distribution = qnorm, 
                 dparams = list(mean = 1/lambda, sd = 1/(sqrt(n)*lambda)),
