--- a/06_StatisticalInference/CourseProject/BasicInferentialDataAnalysis.Rmd
+++ b/06_StatisticalInference/CourseProject/BasicInferentialDataAnalysis.Rmd
@@ -103,19 +103,19 @@ First we split the three groups according to the rule
 and we compute their sample means:
 
 ```{r splitDose, echo = F}
-dose.5 <- ToothGrowth %>%
+grp1 <- ToothGrowth %>%
         filter(dose == 0.5) %>%
         select(len)
 
-dose1 <- ToothGrowth %>%
+grp2 <- ToothGrowth %>%
         filter(dose == 1) %>%
         select(len)
 
-dose2 <- ToothGrowth %>%
+grp3 <- ToothGrowth %>%
         filter(dose == 2) %>%
         select(len)
 
-c("grp1" = colMeans(dose.5), "grp2" = colMeans(dose1), "grp3" = colMeans(dose2))
+c("grp1" = colMeans(grp1), "grp2" = colMeans(grp2), "grp3" = colMeans(grp3))
 ```
 
 Then we perform a T test to check whether there is a significant difference 
@@ -123,7 +123,7 @@ between the means at level \(\alpha = 0.05\). If we compare group 2 (dose
 level = 1 mg/day) with group 1 (dose level = 0.5 mg/day):
 
 ```{r firstTest}
-t.test(dose1, dose.5, alternative = "greater")$p.value
+t.test(grp2, grp1, alternative = "greater")$p.value
 ```
 
 We can reject the null hypothesis that the two means coincide, since the 
@@ -131,7 +131,7 @@ p-value is much smaller than 0.05. Similarly, if we compare group 3 (dose
 level = 2 mg/day) with group 2 (dose level = 1 mg/day):
 
 ```{r secondTest}
-t.test(dose2, dose1, alternative = "greater")$p.value
+t.test(grp3, grp2, alternative = "greater")$p.value
 ```
 
 then we can reject the null hypothesis of equal means, since the p-value is much 
@@ -145,11 +145,11 @@ For the sake of clarity, we can also compute two-sided 95% T confidence
 intervals for the means using the `conf.int` component of `t.test`:
 
 ```{r confInt, echo = F}
-grp1 <- t.test(dose.5,alternative = "two.sided")$conf.int[1:2]
-grp2 <- t.test(dose1,alternative = "two.sided")$conf.int[1:2]
-grp3 <- t.test(dose2,alternative = "two.sided")$conf.int[1:2]
+grp1mn <- t.test(grp1, alternative = "two.sided")$conf.int[1:2]
+grp2mn <- t.test(grp2, alternative = "two.sided")$conf.int[1:2]
+grp3mn <- t.test(grp3, alternative = "two.sided")$conf.int[1:2]
 
-df <- as.data.frame(rbind(grp1,grp2,grp3))
+df <- as.data.frame(rbind(grp1mn,grp2mn,grp3mn))
 names(df) <- c("min","max")
 df
 ```
