--- a/06_StatisticalInference/CourseProject/BasicInferentialDataAnalysisPDF.Rmd
+++ b/06_StatisticalInference/CourseProject/BasicInferentialDataAnalysisPDF.Rmd
@@ -192,3 +192,8 @@ We conclude that there can be a relationship between the delivery method and
 the length of the odontoblasts. Namely, subjects which received vitamin C via 
 orange juice have, on average, longer odontoblasts than those who received it 
 via ascorbic acid.
+
+Readers interested in a literate version of this report, with explicit R code,
+may refer to the 
+[R markdown file](https://github.com/paolosaracco/DataScienceSpecialization/blob/main/06_StatisticalInference/CourseProject/BasicInferentialDataAnalysis.Rmd) 
+on my GitHub repository. 
